fixed spacing of links on contact page

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -581,7 +581,7 @@ ul {
 }
 
 #first-column li {
-  margin-left: 40%;
+  margin-left: 35%;
   margin-top: 10px;
 }
 
